Fix layout of dashboard on narrow screens

--- a/client/components/dashboard/dashboard.module.css
+++ b/client/components/dashboard/dashboard.module.css
@@ -1,15 +1,19 @@
 .layout {
+  justify-self: center;
+  min-width: min-content;
+  width: 60%;
   padding: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 60px;
 }
 
 .section {
   background-color: var(--background-color-medium);
   padding: 25px;
+  width: 100%;
   display: flex;
-  width: 60%;
   flex-direction: column;
   align-items: center;
 }
